update jupyter notebook + add shapefiles

--- a/pyGISS - Jupyter notebook/gis_tkinter.ipynb
+++ b/pyGISS - Jupyter notebook/gis_tkinter.ipynb
@@ -26,23 +26,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "projected coordinates: x=1398760.5712749045, y=5444629.270717129\n",
-      "geographic coordinates: lon=12.56528, lat=44.05754999999991\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## pyproj\n",
     "\n",
     "from pyproj import Proj\n",
-    "mercator = Proj(init=\"epsg:3395\")\n",
+    "mercator = Proj(init='epsg:3395')\n",
     "\n",
     "# geographic coordinates of Rimini\n",
     "# Longitude: 12.5652800°\n",
@@ -61,31 +52,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MultiPolygon 487 True Polygon\n",
-      "MultiPolygon 631 True Polygon\n",
-      "MultiPolygon 296 True Polygon\n",
-      "MultiPolygon 55 True Polygon\n",
-      "MultiPolygon 188 True Polygon\n",
-      "MultiPolygon 135 True Polygon\n",
-      "MultiPolygon 35 True Polygon\n",
-      "MultiPolygon 136 True Polygon\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## extract the polygons of a shapefile \n",
     "\n",
     "import shapely.geometry\n",
     "from shapefile import Reader\n",
     "\n",
-    "path_to_shapefile = 'C:/Users/minto/Desktop/NetDim/Shapefiles/continent.shp'\n",
+    "path_to_shapefile = 'C:/Users/minto/Desktop/EuroPython 2017/pyGISS - Jupyter notebook/Continents.shp'\n",
     "\n",
     "# open the .shp file with the shapefile Reader\n",
     "sf = Reader(path_to_shapefile)  \n",
@@ -102,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -116,10 +92,10 @@
     "window = tk.Tk()\n",
     "canvas = tk.Canvas(window, width=800, height=600, background='white')\n",
     "# to be replaced with local path to a shapefile\n",
-    "path_to_shapefile = 'C:/Users/minto/Desktop/PyGISS/shapefiles/World countries.shp'\n",
+    "path_to_shapefile = 'C:/Users/minto/Desktop/EuroPython 2017/pyGISS - Jupyter notebook/World countries.shp'\n",
     "        \n",
     "def to_projected_coordinates(longitude, latitude):\n",
-    "    px, py = pyproj.Proj(init=\"epsg:3395\")(longitude, latitude)\n",
+    "    px, py = pyproj.Proj(init='epsg:3395')(longitude, latitude)\n",
     "    # in tkinter, the y axis is reversed, we take the inverse of the projected y coordinate\n",
     "    return px, -py\n",
     "\n",
@@ -142,6 +118,56 @@
     "# unix zoom\n",
     "canvas.bind('<Button-4>', lambda e: canvas.scale('all', e.x, e.y, 1.2, 1.2))\n",
     "canvas.bind('<Button-5>', lambda e: canvas.scale('all', e.x, e.y, 0.8, 0.8))\n",
+    "canvas.pack()\n",
+    "window.mainloop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from tkinter import filedialog\n",
+    "import tkinter as tk\n",
+    "import shapely.geometry\n",
+    "import shapefile\n",
+    "import pyproj\n",
+    "\n",
+    "window = tk.Tk()\n",
+    "canvas = tk.Canvas(window, width=800, height=600, background='white')\n",
+    "        \n",
+    "def to_projected_coordinates(longitude, latitude):\n",
+    "    px, py = pyproj.Proj('+proj=ortho +lon_0=28 +lat_0=47')(longitude, latitude)\n",
+    "    # in tkinter, the y axis is reversed, we take the inverse of the projected y coordinate\n",
+    "    return px, -py\n",
+    "\n",
+    "# ask the user to choose a file\n",
+    "filepath ,= tk.filedialog.askopenfilenames(title='Import shapefile')\n",
+    "sf = shapefile.Reader(filepath)       \n",
+    "polygons = sf.shapes() \n",
+    "for polygon in polygons:\n",
+    "    # convert shapefile geometries into shapely geometries\n",
+    "    # to extract the polygons of a multipolygon\n",
+    "    polygon = shapely.geometry.shape(polygon)\n",
+    "    # if it is a polygon, we use a list to make it iterable\n",
+    "    if polygon.geom_type == 'Polygon':\n",
+    "        polygon = [polygon]\n",
+    "    for land in polygon:\n",
+    "        land = str(land)[10:-2].replace(', ', ',').replace(' ', ',')\n",
+    "        coords = land.replace('(', '').replace(')', '').split(',')\n",
+    "        canvas.create_polygon(sum((to_projected_coordinates(*c) for c in zip(coords[0::2], coords[1::2])), ()))\n",
+    "    \n",
+    "# windows zoom\n",
+    "canvas.bind('<MouseWheel>', lambda e: canvas.scale('all', e.x, e.y, (e.delta>0)*1.2 or 0.8, (e.delta>0)*1.2 or 0.8))\n",
+    "# unix zoom\n",
+    "canvas.bind('<Button-4>', lambda e: canvas.scale('all', e.x, e.y, 1.2, 1.2))\n",
+    "canvas.bind('<Button-5>', lambda e: canvas.scale('all', e.x, e.y, 0.8, 0.8))\n",
+    "# canvas sliding with right-click button\n",
+    "canvas.bind('<ButtonPress-3>', lambda e: canvas.scan_mark(e.x, e.y))\n",
+    "canvas.bind('<B3-Motion>', lambda e: canvas.scan_dragto(e.x, e.y, gain=1))\n",
     "canvas.pack()\n",
     "window.mainloop()"
    ]
