--- a/pyGISS - Jupyter notebook/gis_tkinter.ipynb
+++ b/pyGISS - Jupyter notebook/gis_tkinter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -26,9 +26,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "projected coordinates: x=1398760.5712749045, y=5444629.270717129\n",
+      "geographic coordinates: lon=12.56528, lat=44.05754999999991\n"
+     ]
+    }
+   ],
    "source": [
     "## pyproj\n",
     "\n",
@@ -52,9 +61,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MultiPolygon 487 True Polygon\n",
+      "MultiPolygon 631 True Polygon\n",
+      "MultiPolygon 296 True Polygon\n",
+      "MultiPolygon 55 True Polygon\n",
+      "MultiPolygon 188 True Polygon\n",
+      "MultiPolygon 135 True Polygon\n",
+      "MultiPolygon 35 True Polygon\n",
+      "MultiPolygon 136 True Polygon\n"
+     ]
+    }
+   ],
    "source": [
     "## extract the polygons of a shapefile \n",
     "\n",
@@ -78,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -124,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -170,6 +194,76 @@
     "canvas.bind('<B3-Motion>', lambda e: canvas.scan_dragto(e.x, e.y, gain=1))\n",
     "canvas.pack()\n",
     "window.mainloop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SystemExit",
+     "evalue": "0",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[1;31mSystemExit\u001b[0m\u001b[1;31m:\u001b[0m 0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\users\\minto\\desktop\\apps\\pyzo\\pyzo2015a\\lib\\site-packages\\IPython\\core\\interactiveshell.py:2855: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from PyQt5 import QtCore, QtGui, QtWidgets\n",
+    "import pyproj\n",
+    "import shapefile\n",
+    "import shapely.geometry\n",
+    "import sys\n",
+    "\n",
+    "class PyQTGISS(QtWidgets.QWidget):\n",
+    "    \n",
+    "    def __init__(self, parent=None):\n",
+    "        QtWidgets.QWidget.__init__(self, parent)\n",
+    "        scene = QtWidgets.QGraphicsScene()\n",
+    "        scene.setSceneRect(scene.itemsBoundingRect())\n",
+    "        self.path_to_shapefile = 'C:/Users/minto/Desktop/EuroPython 2017/pyGISS - Jupyter notebook/World countries.shp'\n",
+    "        for polygon in self.create_polygon():\n",
+    "            scene.addPolygon(polygon)\n",
+    "        self.view = QtWidgets.QGraphicsView(scene)\n",
+    "        layout = QtWidgets.QVBoxLayout()\n",
+    "        layout.addWidget(self.view)\n",
+    "        self.setLayout(layout)\n",
+    "        \n",
+    "    def create_polygon(self):\n",
+    "        sf = shapefile.Reader(self.path_to_shapefile)       \n",
+    "        polygons = sf.shapes() \n",
+    "        for polygon in polygons:\n",
+    "            # convert shapefile geometries into shapely geometries\n",
+    "            # to extract the polygons of a multipolygon\n",
+    "            polygon = shapely.geometry.shape(polygon)\n",
+    "            # if it is a polygon, we use a list to make it iterable\n",
+    "            if polygon.geom_type == 'Polygon':\n",
+    "                polygon = [polygon]\n",
+    "            for land in polygon:\n",
+    "                qt_polygon = QtGui.QPolygonF() \n",
+    "                land = str(land)[10:-2].replace(', ', ',').replace(' ', ',')\n",
+    "                coords = land.replace('(', '').replace(')', '').split(',')\n",
+    "                for longitude, latitude in zip(coords[0::2], coords[1::2]):\n",
+    "                    px, py = pyproj.Proj(init='epsg:3395')(longitude, latitude)\n",
+    "                    qt_polygon.append(QtCore.QPointF(px/100000, -py/100000))\n",
+    "                yield qt_polygon\n",
+    "\n",
+    "app = QtWidgets.QApplication(sys.argv)\n",
+    "widget = PyQTGISS()\n",
+    "widget.resize(640, 480)\n",
+    "widget.show()\n",
+    "sys.exit(app.exec_())"
    ]
   },
   {
