change int des to avoid timeout exception

--- a/pyGISS - Jupyter notebook/gis_tkinter.ipynb
+++ b/pyGISS - Jupyter notebook/gis_tkinter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -26,18 +26,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "projected coordinates: x=1398760.5712749045, y=5444629.270717129\n",
-      "geographic coordinates: lon=12.56528, lat=44.05754999999991\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## pyproj\n",
     "\n",
@@ -61,24 +52,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MultiPolygon 487 True Polygon\n",
-      "MultiPolygon 631 True Polygon\n",
-      "MultiPolygon 296 True Polygon\n",
-      "MultiPolygon 55 True Polygon\n",
-      "MultiPolygon 188 True Polygon\n",
-      "MultiPolygon 135 True Polygon\n",
-      "MultiPolygon 35 True Polygon\n",
-      "MultiPolygon 136 True Polygon\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## extract the polygons of a shapefile \n",
     "\n",
@@ -102,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -149,9 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from tkinter import filedialog\n",
@@ -168,6 +142,9 @@
     "    # in tkinter, the y axis is reversed, we take the inverse of the projected y coordinate\n",
     "    return px, -py\n",
     "\n",
+    "cx, cy = to_projected_coordinates(28, 47)\n",
+    "canvas.create_oval(cx - 6371000, cy - 6371000, cx + 6371000, cy + 6371000, outline='black', fill='deep sky blue')\n",
+    "\n",
     "# ask the user to choose a file\n",
     "filepath ,= tk.filedialog.askopenfilenames(title='Import shapefile')\n",
     "sf = shapefile.Reader(filepath)       \n",
@@ -182,8 +159,9 @@
     "    for land in polygon:\n",
     "        land = str(land)[10:-2].replace(', ', ',').replace(' ', ',')\n",
     "        coords = land.replace('(', '').replace(')', '').split(',')\n",
-    "        canvas.create_polygon(sum((to_projected_coordinates(*c) for c in zip(coords[0::2], coords[1::2])), ()))\n",
-    "    \n",
+    "        canvas.create_polygon(sum((to_projected_coordinates(*c) for c in zip(coords[0::2], coords[1::2])), ()),\n",
+    "                             fill = 'green3', outline='black')\n",
+    "            \n",
     "# windows zoom\n",
     "canvas.bind('<MouseWheel>', lambda e: canvas.scale('all', e.x, e.y, (e.delta>0)*1.2 or 0.8, (e.delta>0)*1.2 or 0.8))\n",
     "# unix zoom\n",
