--- a/pyGISS - Jupyter notebook/gis_tkinter.ipynb
+++ b/pyGISS - Jupyter notebook/gis_tkinter.ipynb
@@ -27,12 +27,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "## pyproj\n",
     "\n",
     "from pyproj import Proj\n",
+    "\n",
+    "# epsg 3395 is the Mercator projection\n",
     "mercator = Proj(init='epsg:3395')\n",
     "\n",
     "# geographic coordinates of Rimini\n",
@@ -52,14 +56,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MultiPolygon 487 True Polygon\n",
+      "MultiPolygon 631 True Polygon\n",
+      "MultiPolygon 296 True Polygon\n",
+      "MultiPolygon 55 True Polygon\n",
+      "MultiPolygon 188 True Polygon\n",
+      "MultiPolygon 135 True Polygon\n",
+      "MultiPolygon 35 True Polygon\n",
+      "MultiPolygon 136 True Polygon\n"
+     ]
+    }
+   ],
    "source": [
     "## extract the polygons of a shapefile \n",
     "\n",
-    "import shapely.geometry\n",
     "from shapefile import Reader\n",
+    "import shapely.geometry\n",
     "\n",
     "path_to_shapefile = 'C:/Users/minto/Desktop/EuroPython 2017/pyGISS - Jupyter notebook/Continents.shp'\n",
     "\n",
@@ -67,7 +86,7 @@
     "sf = Reader(path_to_shapefile)  \n",
     "# retrieves the shapefile's shapes\n",
     "shapes = sf.shapes() \n",
-    "for obj in shapes:\n",
+    "for i, obj in enumerate(shapes):\n",
     "    # convert shapefile geometries into shapely geometries\n",
     "    shape = shapely.geometry.shape(obj)\n",
     "    # - geom_type tells us if it is a polygon or a multipolygon\n",
@@ -78,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -125,7 +144,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from tkinter import filedialog\n",
@@ -176,27 +197,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SystemExit",
-     "evalue": "0",
-     "output_type": "error",
-     "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[1;31mSystemExit\u001b[0m\u001b[1;31m:\u001b[0m 0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\users\\minto\\desktop\\apps\\pyzo\\pyzo2015a\\lib\\site-packages\\IPython\\core\\interactiveshell.py:2855: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
-      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "from PyQt5 import QtCore, QtGui, QtWidgets\n",
     "import pyproj\n",
