--- a/pyGISS - Jupyter notebook/gis_tkinter.ipynb
+++ b/pyGISS - Jupyter notebook/gis_tkinter.ipynb
@@ -27,9 +27,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## extract the polygons of a shapefile \n",
+    "\n",
+    "from shapefile import Reader\n",
+    "import shapely.geometry\n",
+    "\n",
+    "path_to_shapefile = 'C:/Users/minto/Desktop/EuroPython 2017/pyGISS - Jupyter notebook/Continents.shp'\n",
+    "\n",
+    "# open the .shp file with the shapefile Reader\n",
+    "sf = Reader(path_to_shapefile)  \n",
+    "# retrieves the shapefile's shapes\n",
+    "shapes = sf.shapes() \n",
+    "for i, obj in enumerate(shapes):\n",
+    "    # convert shapefile geometries into shapely geometries\n",
+    "    shape = shapely.geometry.shape(obj)\n",
+    "    # - geom_type tells us if it is a polygon or a multipolygon\n",
+    "    # - the length of a multipolygon tells us how many polygons it contains\n",
+    "    # - a shapely multipolygon is an iterable\n",
+    "    print(shape.geom_type, len(shape), hasattr(shape, '__iter__'), shape[0].geom_type)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "## pyproj\n",
@@ -56,48 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MultiPolygon 487 True Polygon\n",
-      "MultiPolygon 631 True Polygon\n",
-      "MultiPolygon 296 True Polygon\n",
-      "MultiPolygon 55 True Polygon\n",
-      "MultiPolygon 188 True Polygon\n",
-      "MultiPolygon 135 True Polygon\n",
-      "MultiPolygon 35 True Polygon\n",
-      "MultiPolygon 136 True Polygon\n"
-     ]
-    }
-   ],
-   "source": [
-    "## extract the polygons of a shapefile \n",
-    "\n",
-    "from shapefile import Reader\n",
-    "import shapely.geometry\n",
-    "\n",
-    "path_to_shapefile = 'C:/Users/minto/Desktop/EuroPython 2017/pyGISS - Jupyter notebook/Continents.shp'\n",
-    "\n",
-    "# open the .shp file with the shapefile Reader\n",
-    "sf = Reader(path_to_shapefile)  \n",
-    "# retrieves the shapefile's shapes\n",
-    "shapes = sf.shapes() \n",
-    "for i, obj in enumerate(shapes):\n",
-    "    # convert shapefile geometries into shapely geometries\n",
-    "    shape = shapely.geometry.shape(obj)\n",
-    "    # - geom_type tells us if it is a polygon or a multipolygon\n",
-    "    # - the length of a multipolygon tells us how many polygons it contains\n",
-    "    # - a shapely multipolygon is an iterable\n",
-    "    print(shape.geom_type, len(shape), hasattr(shape, '__iter__'), shape[0].geom_type)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -198,31 +181,35 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from PyQt5 import QtCore, QtGui, QtWidgets\n",
+    "from PyQt5.QtCore import Qt\n",
+    "from PyQt5.QtGui import QPixmap\n",
+    "from PyQt5.QtWidgets import (\n",
+    "                             QPushButton, \n",
+    "                             QWidget, \n",
+    "                             QApplication, \n",
+    "                             QLabel, \n",
+    "                             QGraphicsPixmapItem\n",
+    "                             )\n",
     "import pyproj\n",
     "import shapefile\n",
     "import shapely.geometry\n",
     "import sys\n",
     "\n",
-    "class PyQTGISS(QtWidgets.QWidget):\n",
-    "    \n",
-    "    def __init__(self, parent=None):\n",
-    "        QtWidgets.QWidget.__init__(self, parent)\n",
-    "        scene = QtWidgets.QGraphicsScene()\n",
-    "        scene.setSceneRect(scene.itemsBoundingRect())\n",
-    "        self.path_to_shapefile = 'C:/Users/minto/Desktop/EuroPython 2017/pyGISS - Jupyter notebook/World countries.shp'\n",
+    "class MainWidget(QtWidgets.QGraphicsView):\n",
+    "    def __init__(self, parent):\n",
+    "        super(MainWidget, self).__init__(parent)\n",
+    "        self.scene = QtWidgets.QGraphicsScene(self)\n",
+    "        self.path_to_shapefile = 'C:/Users/minto/Desktop/pyGISS/shapefiles/World countries.shp'\n",
     "        for polygon in self.create_polygon():\n",
-    "            scene.addPolygon(polygon)\n",
-    "        self.view = QtWidgets.QGraphicsView(scene)\n",
-    "        layout = QtWidgets.QVBoxLayout()\n",
-    "        layout.addWidget(self.view)\n",
-    "        self.setLayout(layout)\n",
-    "        \n",
+    "            self.scene.addItem(polygon)\n",
+    "        self.setScene(self.scene)\n",
+    "        self.setTransformationAnchor(QtWidgets.QGraphicsView.AnchorUnderMouse)\n",
+    "        self.setRenderHint(QtGui.QPainter.Antialiasing)\n",
+    "\n",
     "    def create_polygon(self):\n",
     "        sf = shapefile.Reader(self.path_to_shapefile)       \n",
     "        polygons = sf.shapes() \n",
@@ -237,26 +224,45 @@
     "                qt_polygon = QtGui.QPolygonF() \n",
     "                land = str(land)[10:-2].replace(', ', ',').replace(' ', ',')\n",
     "                coords = land.replace('(', '').replace(')', '').split(',')\n",
-    "                for longitude, latitude in zip(coords[0::2], coords[1::2]):\n",
-    "                    px, py = pyproj.Proj(init='epsg:3395')(longitude, latitude)\n",
-    "                    qt_polygon.append(QtCore.QPointF(px/100000, -py/100000))\n",
-    "                yield qt_polygon\n",
+    "                for lon, lat in zip(coords[0::2], coords[1::2]):\n",
+    "                    px, py = pyproj.Proj('+proj=ortho +lon_0=28 +lat_0=47')(lon, lat)\n",
+    "                    if px == 1e+30:\n",
+    "                        continue\n",
+    "                    qt_polygon.append(QtCore.QPointF(px/10000, -py/10000))\n",
+    "                yield QtWidgets.QGraphicsPolygonItem(qt_polygon)\n",
     "\n",
-    "app = QtWidgets.QApplication(sys.argv)\n",
-    "widget = PyQTGISS()\n",
-    "widget.resize(640, 480)\n",
-    "widget.show()\n",
-    "sys.exit(app.exec_())"
+    "    def wheelEvent(self, event):\n",
+    "        factor = 1.25 if event.angleDelta().y() > 0 else 0.8\n",
+    "        self.scale(factor, factor)\n",
+    "\n",
+    "class Window(QWidget):\n",
+    "    def __init__(self):\n",
+    "        super(Window, self).__init__()\n",
+    "        self.viewer = MainWidget(self)\n",
+    "        self.edit = QtWidgets.QLineEdit(self)\n",
+    "        self.edit.setReadOnly(True)\n",
+    "        self.button = QtWidgets.QToolButton(self)\n",
+    "        self.button.setText('...')\n",
+    "        self.button.clicked.connect(self.handleOpen)\n",
+    "        layout = QtWidgets.QGridLayout(self)\n",
+    "        layout.addWidget(self.viewer, 0, 0, 1, 2)\n",
+    "        layout.addWidget(self.edit, 1, 0, 1, 1)\n",
+    "        layout.addWidget(self.button, 1, 1, 1, 1)\n",
+    "\n",
+    "    def handleOpen(self):\n",
+    "        path = QtWidgets.QFileDialog.getOpenFileName(\n",
+    "            self, 'Choose Image', self.edit.text())\n",
+    "        if path:\n",
+    "            self.edit.setText(path)\n",
+    "            self.viewer.setPhoto(QtGui.QPixmap(path))\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    app = QApplication(sys.argv)\n",
+    "    window = Window()\n",
+    "    window.setGeometry(500, 300, 800, 600)\n",
+    "    window.show()\n",
+    "    sys.exit(app.exec_())"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -264,18 +270,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.4.1"
   }
  },
  "nbformat": 4,
